--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="contact_list_item_internal_spacing">8dp</dimen>
+    <dimen name="contact_list_item_label_font_size">11sp</dimen>
+    <dimen name="form_contact_add_field_spacing">16dp</dimen>
 </resources>
